# T-GLean

./: .gitignore  CMakeLists.txt  readme.md
configs/glean/: 2dagent_1a_lr.cfg  2dagent_1a_lr2.cfg  2dagent_1a_lr4.cfg  2dagent_1a_lr8.cfg  2dagent_1bc.cfg  2dagent_1d.cfg
cpp/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
cpp/src/: CMakeLists.txt  data.cpp  data.h  includes.h  layer.cpp  layer.h  model.cpp  model.h  network.cpp  network.h  network_config.cpp  network_config.h  optimizer.cpp  optimizer.h
cpp/src/glean_interface/: INIReader.h  glean.cpp  glean.h
cpp/src/output_layer/: fc_layer.cpp  fc_layer.h  output_layer.cpp  output_layer.h  sm_layer.cpp  sm_layer.h
datasets/2dagent/: 2dagent_a.npy  2dagent_ar.npy  2dagent_lr.npy  2dagent_lr2.npy  2dagent_lr4.npy  2dagent_lr8.npy  2dagent_observe-ccw.npy  2dagent_observe-cw.npy  2dagent_observe-gl.npy  2dagent_observe-gr.npy  2dagent_observe_cw-ccw-g.npy
datasets/branching_2_10_3/: branching_two_g.npy
planner/: CMakeLists.txt  gtest.cpp  gtrain.cpp
planner/python/: gpvrnn.py  gtest.py  gtrain.py  planner_online_2dagent.py  planner_online_2dagent_ge.py  planner_online_2dagent_gu.py  planner_utils.py
planner/tests/: test_gbase.toml  test_gpipeline.cpp  test_gpipeline.toml
results/2dagent_1a_lr/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr/parameters/epo_100000/layer1/: A.npz  B.npz  W.npz
results/2dagent_1a_lr/parameters/epo_100000/layer2/: A.npz  B.npz  W.npz
results/2dagent_1a_lr/parameters/epo_100000/layer3/: A.npz  B.npz  W.npz
results/2dagent_1a_lr/parameters/epo_100000/smLayer/: W.npy  b.npy
results/2dagent_1a_lr2/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr2/parameters/epo_100000/layer1/: A.npz  B.npz  W.npz
results/2dagent_1a_lr2/parameters/epo_100000/layer2/: A.npz  B.npz  W.npz
results/2dagent_1a_lr2/parameters/epo_100000/layer3/: A.npz  B.npz  W.npz
results/2dagent_1a_lr2/parameters/epo_100000/smLayer/: W.npy  b.npy
results/2dagent_1a_lr2_1/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  metadata.toml  recErr.txt
results/2dagent_1a_lr2_2/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr2_3/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr2_4/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr4/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr4_1/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr4_2/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  metadata.toml  recErr.txt
results/2dagent_1a_lr4_3/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr4_4/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr8/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr8_1/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr8_2/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  metadata.toml  recErr.txt
results/2dagent_1a_lr8_3/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr8_4/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr_1/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr_2/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr_3/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1a_lr_4/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1bc/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  metadata.toml  recErr.txt
results/2dagent_1d/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
results/2dagent_1d_1/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  metadata.toml  recErr.txt
results/2dagent_1d_2/learning/: layer1_kld.txt  layer2_kld.txt  layer3_kld.txt  recErr.txt
(+242 files in other folders)
